@@ -153,6 +153,7 @@ Cacti CHANGELOG
 -issue#5434: Remove SQL Mode NO_AUTO_CREATE_USER as it's deprecated and removed from recent MySQL releases
 -issue#5440: Device class not saved when importing a template during a new installation 
 -issue#5446: Duplication functions for Graph/Template and Data Source/Template do not return an id
+-issue#5447: Duplication of Device Templates happens in the base Cacti file and not in an API file
 -feature#5375: Add template for Fortinet firewall and Aruba Instant cluster
 -feature#5393: Add template for SNMP printer
 -feature#5418: Display device class before package import 
